// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigation-accordion Basic renders as expected 1`] = `
<div
  className="dr-ui--navigation-accordion"
>
  <div
    className="block-mm none"
  >
    <div
      className="px12 block-mm none bg-lighten75"
    >
      <div
        className="py3 "
      >
        <a
          className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
          href="page-one"
        >
          <div
            className="pl12 py12 txt-bold txt-m flex-child color-black"
          >
            Title one
            
          </div>
        </a>
        <div
          className="ml24 pt0"
        >
          <ul
            className="txt-m pb12 inline-block-mm none unprose"
          >
            <li
              className="mb6"
            >
              <a
                className="color-blue-on-hover"
                href="#heading-one"
                id="#heading-one-sidebar"
              >
                Heading one
                
              </a>
              <ul
                className="none"
              />
            </li>
            <li
              className="mb6"
            >
              <a
                className="color-blue-on-hover"
                href="#heading-two"
                id="#heading-two-sidebar"
              >
                Heading two
                
              </a>
              <ul
                className="none"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      className="px12 block-mm none"
    >
      <div
        className="py3  border-t border--gray-light"
      >
        <a
          className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
          href="page-two"
        >
          <div
            className="pl12 py12 txt-bold txt-m flex-child"
          >
            Title two
            
          </div>
          <div
            className="flex-child flex-child--no-shrink"
          >
            <svg
              className="events-none icon"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-chevron-down"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
        </a>
        
      </div>
    </div>
  </div>
  <div
    className="none-mm block bg-gray-faint px24 py12"
  >
    <div
      className="dr-ui--navigation-dropdown relative"
    >
      <button
        aria-controls="dr-ui--navigation-dropdown"
        aria-expanded={false}
        aria-haspopup="true"
        aria-label="Toggle menu"
        className="flex-parent flex-parent--center-main flex-parent--space-between-main txt-truncate border border--gray-light py6 px12 bg-white round-full w-full color-gray-on-hover"
        onClick={[Function]}
      >
        <div
          className="txt-truncate"
        >
          Title one
        </div>
        <div
          className="flex-child--no-shrink w18"
        >
          <svg
            className="events-none icon inline-block align-t"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 18,
                "width": 18,
              }
            }
          >
            <use
              xlinkHref="#icon-chevron-down"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </div>
      </button>
      <nav
        aria-hidden={true}
        className="none"
        id="dr-ui--navigation-dropdown"
      >
        <ul>
          <li
            className="mb3"
          >
            <a
              className="link link--gray block py6 px12"
              href="page-one"
            >
              Title one
            </a>
          </li>
          <li
            className="mb3"
          >
            <a
              className="link link--gray block py6 px12"
              href="page-two"
            >
              Title two
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;

exports[`navigation-accordion No second level items renders as expected 1`] = `
<div
  className="dr-ui--navigation-accordion"
>
  <div
    className="block-mm none"
  >
    <div
      className="px12 block-mm none bg-lighten75"
    >
      <div
        className="py3 "
      >
        <a
          className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
          href="page-one"
        >
          <div
            className="pl12 py12 txt-bold txt-m flex-child color-black"
          >
            Title one
            
          </div>
        </a>
        
      </div>
    </div>
    <div
      className="px12 block-mm none"
    >
      <div
        className="py3  border-t border--gray-light"
      >
        <a
          className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
          href="page-two"
        >
          <div
            className="pl12 py12 txt-bold txt-m flex-child"
          >
            Title two
            
          </div>
          <div
            className="flex-child flex-child--no-shrink"
          >
            <svg
              className="events-none icon"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-chevron-down"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
        </a>
        
      </div>
    </div>
  </div>
  <div
    className="none-mm block bg-gray-faint px24 py12"
  >
    <div
      className="dr-ui--navigation-dropdown relative"
    >
      <button
        aria-controls="navigation-2"
        aria-expanded={false}
        aria-haspopup="true"
        aria-label="Toggle menu"
        className="flex-parent flex-parent--center-main flex-parent--space-between-main txt-truncate border border--gray-light py6 px12 bg-white round-full w-full color-gray-on-hover"
        onClick={[Function]}
      >
        <div
          className="txt-truncate"
        >
          Title one
        </div>
        <div
          className="flex-child--no-shrink w18"
        >
          <svg
            className="events-none icon inline-block align-t"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 18,
                "width": 18,
              }
            }
          >
            <use
              xlinkHref="#icon-chevron-down"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </div>
      </button>
      <nav
        aria-hidden={true}
        className="none"
        id="navigation-2"
      >
        <ul>
          <li
            className="mb3"
          >
            <a
              className="link link--gray block py6 px12"
              href="page-one"
            >
              Title one
            </a>
          </li>
          <li
            className="mb3"
          >
            <a
              className="link link--gray block py6 px12"
              href="page-two"
            >
              Title two
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;

exports[`navigation-accordion Shows third level items renders as expected 1`] = `
<div
  className="dr-ui--navigation-accordion"
>
  <div
    className="block-mm none"
  >
    <div
      className="px12 block-mm none bg-lighten75"
    >
      <div
        className="py3 "
      >
        <a
          className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
          href="page-one"
        >
          <div
            className="pl12 py12 txt-bold txt-m flex-child color-black"
          >
            Title one
            
          </div>
        </a>
        <div
          className="ml24 pt0"
        >
          <ul
            className="txt-m pb12 inline-block-mm none unprose"
          >
            <li
              className="mb6"
            >
              <a
                className="color-blue-on-hover"
                href="#heading-one"
                id="#heading-one-sidebar"
              >
                Heading one
                
              </a>
              <ul
                className="pl12 color-darken75"
              >
                <li
                  className="mt6"
                >
                  <a
                    className="color-blue-on-hover txt-bold"
                    href="#"
                    id="#-sidebar"
                  >
                    Subheading one
                    
                  </a>
                </li>
                <li
                  className="mt6"
                >
                  <a
                    className="color-blue-on-hover"
                    href="#subheading-two"
                    id="#subheading-two-sidebar"
                  >
                    Subheading two
                    
                  </a>
                </li>
              </ul>
            </li>
            <li
              className="mb6"
            >
              <a
                className="color-blue-on-hover"
                href="#heading-two"
                id="#heading-two-sidebar"
              >
                Heading two
                
              </a>
              <ul
                className="none"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      className="px12 block-mm none"
    >
      <div
        className="py3  border-t border--gray-light"
      >
        <a
          className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
          href="page-two"
        >
          <div
            className="pl12 py12 txt-bold txt-m flex-child"
          >
            Title two
            
          </div>
          <div
            className="flex-child flex-child--no-shrink"
          >
            <svg
              className="events-none icon"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-chevron-down"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
        </a>
        
      </div>
    </div>
  </div>
  <div
    className="none-mm block bg-gray-faint px24 py12"
  >
    <div
      className="dr-ui--navigation-dropdown relative"
    >
      <button
        aria-controls="navigation-3"
        aria-expanded={false}
        aria-haspopup="true"
        aria-label="Toggle menu"
        className="flex-parent flex-parent--center-main flex-parent--space-between-main txt-truncate border border--gray-light py6 px12 bg-white round-full w-full color-gray-on-hover"
        onClick={[Function]}
      >
        <div
          className="txt-truncate"
        >
          Title one
        </div>
        <div
          className="flex-child--no-shrink w18"
        >
          <svg
            className="events-none icon inline-block align-t"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 18,
                "width": 18,
              }
            }
          >
            <use
              xlinkHref="#icon-chevron-down"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </div>
      </button>
      <nav
        aria-hidden={true}
        className="none"
        id="navigation-3"
      >
        <ul>
          <li
            className="mb3"
          >
            <a
              className="link link--gray block py6 px12"
              href="page-one"
            >
              Title one
            </a>
          </li>
          <li
            className="mb3"
          >
            <a
              className="link link--gray block py6 px12"
              href="page-two"
            >
              Title two
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;

exports[`navigation-accordion Shows third level items with icons renders as expected 1`] = `
<div
  className="dr-ui--navigation-accordion"
>
  <div
    className="block-mm none"
  >
    <div
      className="px12 block-mm none bg-lighten75"
    >
      <div
        className="py3 "
      >
        <a
          className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
          href="page-one"
        >
          <div
            className="pl12 py12 txt-bold txt-m flex-child color-black"
          >
            Title one
            
          </div>
        </a>
        <div
          className="ml24 pt0"
        >
          <ul
            className="txt-m pb12 inline-block-mm none unprose"
          >
            <li
              className="mb6"
            >
              <a
                className="color-blue-on-hover"
                href="#heading-one"
                id="#heading-one-sidebar"
              >
                Heading one
                
              </a>
              <ul
                className="pl12 color-darken75"
              >
                <li
                  className="mt6"
                  style={
                    Object {
                      "marginLeft": "11px",
                      "textIndent": "-24px",
                    }
                  }
                >
                  <a
                    className="color-blue-on-hover txt-bold"
                    href="#"
                    id="#-sidebar"
                  >
                    <span
                      className="mr6 w18 h18 align-middle inline-block bg-gray-faint round-full"
                    >
                      <svg
                        className="events-none icon"
                        focusable="false"
                        role="presentation"
                        style={
                          Object {
                            "height": 16,
                            "width": 16,
                          }
                        }
                      >
                        <use
                          xlinkHref="#icon-paint"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        />
                      </svg>
                    </span>
                    Subheading one
                    
                  </a>
                </li>
                <li
                  className="mt6"
                  style={
                    Object {
                      "marginLeft": "11px",
                      "textIndent": "-24px",
                    }
                  }
                >
                  <a
                    className="color-blue-on-hover"
                    href="#subheading-two"
                    id="#subheading-two-sidebar"
                  >
                    <span
                      className="mr6 w18 h18 align-middle inline-block bg-gray-faint round-full"
                    >
                      <svg
                        className="events-none icon"
                        focusable="false"
                        role="presentation"
                        style={
                          Object {
                            "height": 16,
                            "width": 16,
                          }
                        }
                      >
                        <use
                          xlinkHref="#icon-paint"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        />
                      </svg>
                    </span>
                    Subheading two
                    
                  </a>
                </li>
                <li
                  className="mt6"
                  style={
                    Object {
                      "marginLeft": "11px",
                      "textIndent": "-24px",
                    }
                  }
                >
                  <a
                    className="color-blue-on-hover"
                    href="#subheading-three"
                    id="#subheading-three-sidebar"
                  >
                    <span
                      className="mr6 w18 h18 align-middle inline-block bg-gray-faint round-full"
                    >
                      <svg
                        className="events-none icon"
                        focusable="false"
                        role="presentation"
                        style={
                          Object {
                            "height": 16,
                            "width": 16,
                          }
                        }
                      >
                        <use
                          xlinkHref="#icon-star"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        />
                      </svg>
                    </span>
                    Subheading three is long so we should wrap it nicely
                    
                  </a>
                </li>
              </ul>
            </li>
            <li
              className="mb6"
            >
              <a
                className="color-blue-on-hover"
                href="#heading-two"
                id="#heading-two-sidebar"
              >
                Heading two
                
              </a>
              <ul
                className="none"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      className="px12 block-mm none"
    >
      <div
        className="py3  border-t border--gray-light"
      >
        <a
          className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
          href="page-two"
        >
          <div
            className="pl12 py12 txt-bold txt-m flex-child"
          >
            Title two
            
          </div>
          <div
            className="flex-child flex-child--no-shrink"
          >
            <svg
              className="events-none icon"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-chevron-down"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
        </a>
        
      </div>
    </div>
  </div>
  <div
    className="none-mm block bg-gray-faint px24 py12"
  >
    <div
      className="dr-ui--navigation-dropdown relative"
    >
      <button
        aria-controls="navigation-4"
        aria-expanded={false}
        aria-haspopup="true"
        aria-label="Toggle menu"
        className="flex-parent flex-parent--center-main flex-parent--space-between-main txt-truncate border border--gray-light py6 px12 bg-white round-full w-full color-gray-on-hover"
        onClick={[Function]}
      >
        <div
          className="txt-truncate"
        >
          Title one
        </div>
        <div
          className="flex-child--no-shrink w18"
        >
          <svg
            className="events-none icon inline-block align-t"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 18,
                "width": 18,
              }
            }
          >
            <use
              xlinkHref="#icon-chevron-down"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </div>
      </button>
      <nav
        aria-hidden={true}
        className="none"
        id="navigation-4"
      >
        <ul>
          <li
            className="mb3"
          >
            <a
              className="link link--gray block py6 px12"
              href="page-one"
            >
              Title one
            </a>
          </li>
          <li
            className="mb3"
          >
            <a
              className="link link--gray block py6 px12"
              href="page-two"
            >
              Title two
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;

exports[`navigation-accordion Titles with tags renders as expected 1`] = `
<div
  className="dr-ui--navigation-accordion"
>
  <div
    className="block-mm none"
  >
    <div
      className="px12 block-mm none bg-lighten75"
    >
      <div
        className="py3 "
      >
        <a
          className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
          href="page-one"
        >
          <div
            className="pl12 py12 txt-bold txt-m flex-child color-black"
          >
            Title one
            
          </div>
        </a>
        <div
          className="ml24 pt0"
        >
          <ul
            className="txt-m pb12 inline-block-mm none unprose"
          >
            <li
              className="mb6"
            >
              <a
                className="color-blue-on-hover"
                href="#heading-one"
                id="#heading-one-sidebar"
              >
                Heading one
                
              </a>
              <ul
                className="pl12 color-darken75"
              >
                <li
                  className="mt6"
                >
                  <a
                    className="color-blue-on-hover txt-bold"
                    href="#"
                    id="#-sidebar"
                  >
                    Subheading one
                    <span
                      className="ml6"
                    >
                      <div
                        className="inline-block"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                      >
                        <div
                          aria-describedby="tooltip-1"
                          className="txt-s txt-bold round px6 inline-block cursor-default border"
                          style={
                            Object {
                              "background": "#feefe2",
                              "borderColor": "#ba6e2c",
                              "color": "#78471c",
                            }
                          }
                        >
                          Legacy
                        </div>
                        <div
                          className="hide-visually"
                          id="tooltip-1"
                          role="tooltip"
                        >
                          <div
                            className="txt-s wmax120"
                          >
                            This feature is no longer in active development.
                          </div>
                        </div>
                      </div>
                    </span>
                  </a>
                </li>
                <li
                  className="mt6"
                >
                  <a
                    className="color-blue-on-hover"
                    href="#subheading-two"
                    id="#subheading-two-sidebar"
                  >
                    Subheading two
                    
                  </a>
                </li>
              </ul>
            </li>
            <li
              className="mb6"
            >
              <a
                className="color-blue-on-hover"
                href="#heading-two"
                id="#heading-two-sidebar"
              >
                Heading two
                <span
                  className="ml6"
                >
                  <div
                    className="inline-block"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                  >
                    <div
                      aria-describedby="tooltip-2"
                      className="txt-s txt-bold round px6 inline-block cursor-default border"
                      style={
                        Object {
                          "background": "#FEDADA",
                          "borderColor": "#FD8383",
                          "color": "#bb2224",
                        }
                      }
                    >
                      Custom
                    </div>
                    <div
                      className="hide-visually"
                      id="tooltip-2"
                      role="tooltip"
                    >
                      <div
                        className="txt-s wmax120"
                      >
                        This is a custom tag.
                      </div>
                    </div>
                  </div>
                </span>
              </a>
              <ul
                className="none"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      className="px12 block-mm none"
    >
      <div
        className="py3  border-t border--gray-light"
      >
        <a
          className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
          href="page-two"
        >
          <div
            className="pl12 py12 txt-bold txt-m flex-child"
          >
            Title two
            <span
              className="ml6"
            >
              <div
                className="inline-block"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  aria-describedby="tooltip-3"
                  className="txt-s txt-bold round px6 inline-block cursor-default border"
                  style={
                    Object {
                      "background": "#f1f3fd",
                      "borderColor": "#0428c8",
                      "color": "#0c248d",
                    }
                  }
                >
                  Beta
                </div>
                <div
                  className="hide-visually"
                  id="tooltip-3"
                  role="tooltip"
                >
                  <div
                    className="txt-s wmax120"
                  >
                    This feature is in public beta and is subject to changes.
                  </div>
                </div>
              </div>
            </span>
          </div>
          <div
            className="flex-child flex-child--no-shrink"
          >
            <svg
              className="events-none icon"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-chevron-down"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
        </a>
        
      </div>
    </div>
  </div>
  <div
    className="none-mm block bg-gray-faint px24 py12"
  >
    <div
      className="dr-ui--navigation-dropdown relative"
    >
      <button
        aria-controls="navigation-5"
        aria-expanded={false}
        aria-haspopup="true"
        aria-label="Toggle menu"
        className="flex-parent flex-parent--center-main flex-parent--space-between-main txt-truncate border border--gray-light py6 px12 bg-white round-full w-full color-gray-on-hover"
        onClick={[Function]}
      >
        <div
          className="txt-truncate"
        >
          Title one
        </div>
        <div
          className="flex-child--no-shrink w18"
        >
          <svg
            className="events-none icon inline-block align-t"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 18,
                "width": 18,
              }
            }
          >
            <use
              xlinkHref="#icon-chevron-down"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </div>
      </button>
      <nav
        aria-hidden={true}
        className="none"
        id="navigation-5"
      >
        <ul>
          <li
            className="mb3"
          >
            <a
              className="link link--gray block py6 px12"
              href="page-one"
            >
              Title one
            </a>
          </li>
          <li
            className="mb3"
          >
            <a
              className="link link--gray block py6 px12"
              href="page-two"
            >
              Title two
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;
